--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,8 @@ img {
 .bookmarks::before {
   content: "";
   position: absolute;
-  top: 13px;
-  left: 22px;
+  top: 12px;
+  left: 19px;
   height: 16px;
   width: 14px;
   background-image: url("../img/icon-bookmark.svg");
@@ -196,8 +196,8 @@ img {
 .basket::before {
   content: "";
   position: absolute;
-  top: 13px;
-  left: 22px;
+  top: 12px;
+  left: 25px;
   height: 16px;
   width: 14px;
   background-image: url("../img/icon-cart.svg");
@@ -234,7 +234,7 @@ img {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 38px;
+  margin-top: 41px;
   margin-bottom: 40px;
 }
 
@@ -246,6 +246,7 @@ img {
   color: var(--basic-red);
   padding-left: 30px;
   margin: 0;
+  margin-top: 2px;
 }
 
 .address-block {
@@ -256,15 +257,17 @@ img {
 
 .telephone {
   display: block;
-  padding: 7px 45px 8px 74px;
+  padding: 6px 43px 5px 71px;
+  margin-left: 27px;
+  margin-top: 3px;
   font-weight: bold;
   font-size: 21px;
   line-height: 30px;
   border: 3px solid var(--basic-white);
   color: var(--basic-red);
   background-color: var(--basic-background);
-  background-image: url("../img/telephone-icon.svg");
-  background-position: center left 39px;
+  background-image: url(../img/telephone-icon.svg);
+  background-position: center left 35px;
   background-repeat: no-repeat;
 }
 
@@ -275,6 +278,8 @@ img {
   color: var(--address);
   margin: 0;
   padding: 0;
+  margin-top: 2px;
+  margin-left: 25px;
 }
 
 .address-list {
@@ -287,6 +292,9 @@ img {
   display: flex;
   flex-direction: row;
   list-style: none;
+  font-size: 21px;
+  line-height: 21px;
+  margin-top: 4px;
 }
 
 .user-interface {
@@ -415,7 +423,7 @@ img {
 }
 
 .main-navigation {
-  background-color: var(--basic-grey);
+  background-color: var(--address);
   list-style: none;
   color: var(--basic-white);
 }
@@ -439,11 +447,11 @@ img {
 }
 
 .nav-button-first {
-  margin-left: 15px;
+  margin-left: 28px;
 }
 
 .nav-button-last {
-  margin-right: 15px;
+  margin-right: 28px;
 }
 
 .nav-button:hover, .nav-button:focus {
@@ -491,16 +499,16 @@ img {
 
 .material {
   background-color: var(--special-ylellow);
-  background-image: url("../img/icon-1.svg"), url("../img/new-flag.svg");
+  background-image: url(../img/icon-1.svg), url(../img/new-flag.svg);
   background-repeat: no-repeat;
-  background-position: center right 32px, top right;
+  background-position: center right 42px, top right;
 }
 
 .tools {
   background-color: var(--basic-blue);
   background-image: url("../img/icon-2.svg");
   background-repeat: no-repeat;
-  background-position: center right 32px;
+  background-position: center right 30px;
 }
 
 .tech {
@@ -516,7 +524,7 @@ img {
   background-color: var(--green);
   background-image: url("../img/icon-4.svg");
   background-repeat: no-repeat;
-  background-position: center right 32px;
+  background-position: center right 44px;
 }
 
 .deliver {
@@ -587,14 +595,14 @@ img {
 
 .slider-catalog-button {
   margin-bottom: 27px;
-  margin-left: 24px;
+  margin-left: 26px;
 }
 
 .button-arrow {
   position: absolute;
   height: 41px;
   width: 23px;
-  top: 120px;
+  top: 122px;
   background-color: transparent;
   cursor: pointer;
   border: none;
@@ -602,8 +610,8 @@ img {
 
 .slider-controls {
   position: absolute;
-  bottom: 36px;
-  left: 50%;
+  bottom: 31px;
+  left: 48%;
 }
 
 .button-slide {
@@ -618,10 +626,11 @@ img {
 
 .button-slide-active {
   background-color: var(--basic-red);
+  margin-right: 3px;
 }
 
 .button-arrow-left {
-  left: 21px;
+  left: 25px;
   background-image: url("../img/icon-left.svg");
   background-repeat: no-repeat;
 }
@@ -649,9 +658,17 @@ img {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  padding-left: 28px;
-  padding-right: 38px;
-  margin-bottom: 20px;
+  padding-left: 0px;
+  padding-right: 14px;
+  padding-bottom: 0px;
+}
+
+.title-popular-firms {
+  margin-bottom: 1px;
+}
+
+.title-product {
+  margin: 30px;
 }
 
 .popular-staff h2 {
@@ -666,6 +683,8 @@ img {
   line-height: 30px;
   font-weight: 700;
   color: var(--basic-white);
+  text-transform: uppercase;
+  margin-top: 29px;
 }
 
 .drill-title {
@@ -678,7 +697,9 @@ img {
   text-align: center;
   padding: 0;
   margin: 0;
-  padding-top: 20px;
+  padding-top: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .drill-size {
@@ -722,8 +743,9 @@ img {
   background-color: var(--basic-red);
   display: block;
   padding: 10px 29px 10px 32px;
-  margin-bottom: 10px;
+  margin-bottom: 24px;
   margin-top: auto;
+  border-radius: 2px;
 }
 
 .buy-button::after {
@@ -745,7 +767,8 @@ img {
   grid-gap: 20px;
   margin: 0;
   padding: 0;
-  margin-bottom: 70px;
+  margin-top: 13px;
+  margin-bottom: 60px;
 }
 
 .firms-item:hover, .firms-item:focus {
@@ -773,7 +796,7 @@ img {
 }
 
 .about-item-fix {
-  margin-top: 8px;
+  margin-top: 25px;
 }
 
 .button-toogle {
@@ -789,7 +812,7 @@ img {
   min-height: 61px;
   min-width: 240px;
   border: none;
-  box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069,-37px 0px 17px -20px rgba(0, 0, 0, 0.28) inset;
+  box-shadow: 0px 1px 0px #293449, inset 0px 1px 0px #405069, -37px 0px 17px -20px rgba(0, 0, 0, 0.28) inset;
 }
 
 .button-toogle:hover, .button-toogle:focus {
@@ -915,13 +938,14 @@ img {
 
 .section-about {
   padding-top: 64px;
-  padding-bottom: 99px;background: url("../img/buss.svg");
+  padding-bottom: 99px;
+  background: url("../img/buss.svg");
   background-repeat: no-repeat;
   background-position: right bottom 20px;
 }
 
 .about-item-service {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .section-down {
@@ -934,7 +958,7 @@ margin-bottom: 20px;
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-top: 40px;
+  margin-top: 49px;
 }
 
 .section-about-second {
@@ -956,7 +980,7 @@ margin-bottom: 20px;
   padding: 0;
   margin: 0;
   list-style: none;
-  margin-bottom: 18px;
+  margin-bottom: 9px;
 }
 
 .service-title {
@@ -983,9 +1007,13 @@ margin-bottom: 20px;
 }
 
 .button-map {
-  margin-top: 15px;
+  margin-top: 25px;
   min-width: 300px;
   border: none;
+}
+
+.button-tips {
+  min-width: 220px;
 }
 
 .map-button {
@@ -1028,6 +1056,7 @@ margin-bottom: 20px;
   font-size: 18px;
   line-height: 24px;
   color: var(--basic-white);
+  padding-top: 15px;
 }
 
 .nav-footer-list {
@@ -1059,7 +1088,7 @@ margin-bottom: 20px;
   justify-content: flex-end;
   padding: 0;
   margin: 0;
-  padding-top: 20px;
+  padding-top: 33px;
 }
 
 .first-button {
@@ -1069,6 +1098,9 @@ margin-bottom: 20px;
 
 .copiright {
   color: var(--basic-white);
+  padding-top: 22px;
+  padding-bottom: -3px;
+  margin-top: 15px;
 }
 
 .navigation-footer-second a {
@@ -1077,6 +1109,10 @@ margin-bottom: 20px;
 
 .nav-button-footer {
   margin-left: 58px;
+}
+
+.second-fot-btn {
+  margin-left: 66px
 }
 
 .nav-button-footer:hover, .nav-button-footer:focus, .adress-mail:hover, .adress-mail:focus {
@@ -1100,6 +1136,8 @@ margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   margin: 0;
+  margin-top: 18px;
+  margin-left: -29px;
 }
 
 .icon-social {
@@ -1121,6 +1159,8 @@ margin-bottom: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin-top: 12px;
+  margin-right: 18px;
 }
 
 .feedback address {
@@ -1522,8 +1562,8 @@ margin-bottom: 20px;
   font-size: 17px;
   line-height: 30px;
   text-transform: uppercase;
-  padding-top: 15px;
-  padding-bottom: 12px;
+  padding-top: 14px;
+  padding-bottom: 13px;
 }
 
 .filter-price {
@@ -1549,7 +1589,7 @@ margin-bottom: 20px;
   display: flex;
   flex-direction: column;
   padding: 0;
-  margin: 0;
+  margin-top: 13px;
 }
 
 .range-controls {
@@ -1611,11 +1651,10 @@ margin-bottom: 20px;
   -moz-appearance: none;
   appearance: none;
   margin: 0;
-
 }
 
 .input-price input[type=number] {
-  -moz-appearance:textfield;
+  -moz-appearance: textfield;
 }
 
 .firms-check-list {
